--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "react-markdown": "^9.0.3",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.4",
     "zod": "^3.24.2"
   },
   "devDependencies": {
